fix preloader scrollbar layout shift

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,9 @@
 .lenis.lenis-smooth {
     scroll-behavior: auto;
 }
+body {
+    min-height: 101vh;
+}
 img {
     max-width: 100%;
     height: auto;
